--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -54,12 +54,12 @@
 <br>
 <div class="container">
   <div class="row"> &nbsp;
-    <%= button_to 'Back', movies_path, :method => :get, :class => "btn-md btn-primary" %> &nbsp; &nbsp; &nbsp;
+    <%= link_to 'Back', movies_path, :class => "btn btn-sm btn-secondary" %> &nbsp; &nbsp; &nbsp;
     <% if current_user.is_admin? %>
-      <%= button_to 'Edit', edit_movie_path(@movie), :method => :get, :class => "btn-md btn-info" %> &nbsp; &nbsp; &nbsp;
-      <%= button_to 'Destroy', @movie, method: :delete, :class => "btn-md btn-danger", data: { confirm: 'Are you sure?' } %>
+      <%= link_to 'Edit', edit_movie_path(@movie), :class => "btn btn-sm btn-info" %> &nbsp; &nbsp; &nbsp;
+      <%= link_to 'Destroy', @movie, method: :delete, :class => "btn btn-sm btn-danger", data: { confirm: 'Are you sure?' } %>
     <% else %>
-      <%= button_to 'Rent', new_rental_path(movie_id: @movie.id), class: 'btn-md btn-success' %>
+      <%= link_to 'Rent', new_rental_path(movie_id: @movie.id), class: 'btn btn-sm btn-primary' %>
     <% end %>
   </div>
 </div>
