--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,9 +1,29 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @genre.name %>
-</p>
-
-<%= link_to 'Back', genres_path %> | 
-<%= link_to 'Edit', edit_genre_path(@genre) %>
+<h5 class="container" style="background-color: #bce5ff; color:#42698f; opacity:0.7"><b>Available Movies under "<%= @genre.name %>" genre</b></h5>
+<div class="container">
+  <div class="row">
+    <% @genre.movies.each do |movie| %>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="<%= movie.cover_url %>" class="img-fluid" alt="Responsive image">
+          </div>
+          <div class="flip-card-back">
+            <font size="1.5"><br>
+              <p><strong>Movie name: </strong><%= movie.name %></p>
+              <p><strong>Release Date: </strong><%= movie.release_date %></p>
+              <p><strong>Rating: </strong><%= movie.rating %></p>
+              <p><strong>Genre: </strong><%= movie.genre.name %></p>
+            </font>
+            <br><%= link_to 'Show', movie, :class => "btn btn-sm btn-outline-info" %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div><br><br>
+  <%= link_to 'Back', genres_path, :class => "btn btn-sm btn-secondary" %>
+  <% if current_user.is_admin? %>
+    <%= link_to 'Edit', edit_genre_path(@genre), :class => "btn btn-sm btn-info" %>
+  <% end %>
+</div>
