style changes + buttons x links

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,4 +3,4 @@
 Movie Rental App developed for <%= link_to "Code Academy", 'http://codeacademy.w3ibm.mybluemix.net' %>
 </p>
 
-<p><%= link_to "Home", root_path %></p>
+<p><%= link_to "Home", root_path, :class => "btn btn-sm btn-primary" %></p>
