--- a/app/views/genres/edit.html.erb
+++ b/app/views/genres/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', genre: @genre %>
 
-<%= link_to 'Show', @genre %> |
-<%= link_to 'Back', genres_path %>
+<%= link_to 'Back', genres_path, :class => "btn btn-sm btn-secondary" %>
+<%= link_to 'Show', @genre, :class => "btn btn-sm btn-primary" %>
