--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -2,31 +2,35 @@
 
 <h1>Genres</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Movies count</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @genres.each do |genre| %>
+<div class="container">
+  <table class="table table-striped table-hover" style="width:60%;">
+    <thead style="background-color:rgba(0, 151, 255, 0.5)">
       <tr>
-        <td><%= genre.name %></td>
-        <td><%= genre.movies.count %></td>
-        <td><%= link_to 'Show', genre %></td>
-        <% if current_user.is_admin? %>
-          <td><%= link_to 'Edit', edit_genre_path(genre) %></td>
-          <td><%= link_to 'Destroy', genre, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
+        <th>Name</th>
+        <th style="text-align: center">Movies count</th>
+        <th style="text-align: center">Action</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-<% if current_user.is_admin? %>
-  <%= link_to 'New Genre', new_genre_path %>
-<% end %>
+    <tbody style="background-color:rgba(0, 181, 255, 0.3)">
+      <% @genres.each do |genre| %>
+        <tr>
+          <td><%= genre.name %></td>
+          <td style="text-align: center"><%= genre.movies.count %></td>
+          <td style="text-align: center">
+            <%= link_to 'Show', genre, :class => "btn btn-sm btn-primary" %>
+            <% if current_user.is_admin? %>
+              <%= link_to 'Edit', edit_genre_path(genre), :class => "btn btn-sm btn-info" %>
+              <%= link_to 'Destroy', genre, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-sm btn-danger" %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <br>
+  <% if current_user.is_admin? %>
+    <%= link_to 'New Genre', new_genre_path, :class => "btn btn-sm btn-success" %>
+  <% end %>
+</div>
