--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', movie: @movie %>
 
-<%= link_to 'Show', @movie %> |
-<%= link_to 'Back', movies_path %>
+<%= link_to 'Back', movies_path, :class => "btn btn-sm btn-secondary" %>
+<%= link_to 'Show', @movie, :class => "btn btn-sm btn-primary" %>
