--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,9 +2,9 @@
 
 <p>
 <% if logged_in? %>
-  <%= link_to "Profile", current_user %>
-  <%= link_to "Log out", logout_path, method: :delete %>
+  <%= link_to "Profile", current_user, :class => "btn btn-sm btn-info" %>
+  <%= link_to "Log out", logout_path, method: :delete, :class => "btn btn-sm btn-dark" %>
 <% else %>
-  <%= link_to "Log in", login_path %>
+  <%= link_to "Log in", login_path, :class => "btn btn-sm btn-success" %>
 <% end %>
 </p>
