--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Genres</h1>
+<h5 class="container" style="background-color: #bce5ff; color:#42698f; opacity:0.7; width:500px; text-align:center"><b>Available Genres</b></h5>
 
 <div class="container">
-  <table class="table table-striped table-hover" style="width:60%;">
+  <table class="table table-striped table-hover" style="width:500px;">
     <thead style="background-color:rgba(0, 151, 255, 0.5)">
       <tr>
         <th>Name</th>
