--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -1,24 +1,46 @@
-<h1>My Rentals</h1>
-
-<div class="container">
-  <table class="table table-striped table-hover">
-    <thead style="background-color:rgba(0, 151, 255, 0.5)">
+<h5 class="container" style="background-color: #bce5ff; color:#42698f; opacity:0.7; width:800px; text-align:center"><b>My active rentals</b></h5>
+<table class="table table-striped table-hover" style="width:800px;">
+  <thead style="background-color:rgba(0, 151, 255, 0.5)">
+    <tr>
+      <th style="width:35%;">Movie</th>
+      <th style="width:35%;">Rental valid until</th>
+      <th style="width:20%; text-align: center">View Movie</th>
+      <th style="width:10%; text-align: center">Active?</th>
+    </tr>
+  </thead>
+  <tbody style="background-color:rgba(0, 181, 255, 0.3)">
+    <% current_user.rentals.active.sort_by {|item| item.id}.reverse.each do |r| %>
       <tr>
-        <th>Movie</th>
-        <th>Rented from</th>
-        <th>Rented until</th>
-        <th>Active?</th>
+        <td><%= r.movie.name %></td>
+        <td><%= r.valid_to %></td>
+        <td style="text-align: center">
+          <%= link_to "Play", r.movie.movie_url, class: 'btn btn-sm btn-success'%>
+        <%= link_to 'Details', r.movie, :class => "btn btn-sm btn-info" %></td>
+        <td style="text-align: center"><%= r.currently_rented? %></td>
       </tr>
-    </thead>
-    <tbody style="background-color:rgba(0, 181, 255, 0.3)">
-      <% current_user.rentals.sort_by {|item| item.id}.reverse.each do |r| %>
-        <tr>
-          <td><%= r.movie.name %></td>
-          <td><%= r.valid_from %></td>
-          <td><%= r.valid_to %></td>
-          <td><%= r.currently_rented? %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+    <% end %>
+  </tbody>
+</table><br>
+<h5 class="container" style="background-color: #bce5ff; color:#42698f; opacity:0.7; width:800px; text-align:center"><b>My rentals history</b></h5>
+<table class="table table-striped table-hover" style="width:800px;">
+  <thead style="background-color:rgba(0, 151, 255, 0.5)">
+    <tr>
+      <th style="width:35%;">Movie</th>
+      <th style="width:35%;">Rental expired on</th>
+      <th style="width:20%; text-align: center">View Movie</th>
+      <th style="width:10%; text-align: center">#Rents</th>
+    </tr>
+  </thead>
+  <tbody style="background-color:rgba(0, 181, 255, 0.3)">
+    <% current_user.rentals.inactive.sort_by {|item| item.id}.reverse.each do |r| %>
+      <tr>
+        <td><%= r.movie.name %></td>
+        <td><%= r.valid_to %></td>
+        <td style="text-align: center">
+          <%= link_to 'Rent', new_rental_path(movie_id: r.movie.id), class: 'btn btn-sm btn-primary' %>
+        <%= link_to 'Details', r.movie, :class => "btn btn-sm btn-info" %></td>
+        <td style="text-align: center"><%= current_user.rentals.where(movie: r.movie).count %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
