--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,10 +1,20 @@
 <p id="notice"><%= notice %></p>
 <div class="container" style="background-color: #bce5ff; color:#42698f; opacity:0.7">
-<div class="row"><div class="col" style="text-align:right"><h5><b>Available Movies</b></h5></div>
-<div class="col" style="text-align:right"><%= form_with(url: movies_url, method: "get") do %>
-  <%= text_field_tag(:q) %>
-  <%= submit_tag("Search") %></div></div></div>
-<% end %>
+  <div class="row">
+    <div class="col" style="text-align:right">
+      <% if params[:q] == nil || params[:q] == "" %> 
+        <h5 class="vertical-center"><b>Available Movies</b></h5></div>
+      <% else %>
+        <h5 class="vertical-center"><b>Available Movies including "<%= params[:q] %>"</b></h5></div>
+      <% end %>
+    <div class="col" style="text-align:right">
+      <%= form_tag(movies_path, method: :get) do %>
+        <%= text_field_tag :q %>
+        <%= submit_tag 'Search' %>
+      <% end %>
+    </div>
+  </div>
+</div>
 <div class="container">
   <div class="row">
     <% @movies.each do |movie| %>
