vertical-center fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,9 +117,6 @@ img {
 }
 
 .vertical-center {
-  margin: 0;
-  position: absolute;
+  position: relative;
   top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
 }
