--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,8 @@
 <% end %>
 <%= f.label :name %><br>
 <%= f.text_field :name %><br>
+<%= f.label :birthdate %><br>
+<%= f.date_field :birthdate %><br>
 <%= f.label :email %><br>
 <%= f.email_field :email %><br>
 <%= f.label :password %><br>
