--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,10 +2,10 @@
 <div class="container" style="background-color: #bce5ff; color:#42698f; opacity:0.7">
   <div class="row">
     <div class="col" style="text-align:right">
-      <% if params[:q] == nil || params[:q] == "" %> 
-        <h5 class="vertical-center"><b>Available Movies</b></h5></div>
-      <% else %>
+      <% if params[:q].present? %> 
         <h5 class="vertical-center"><b>Available Movies including "<%= params[:q] %>"</b></h5></div>
+      <% else %>
+        <h5 class="vertical-center"><b>Available Movies</b></h5></div>
       <% end %>
     <div class="col" style="text-align:right">
       <%= form_tag(movies_path, method: :get) do %>
