added functionallity to filter inactive movies + pagination

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -41,6 +41,11 @@
     <%= form.collection_select(:genre_id, @genres, :id, :name) %>
   </div>
 
+  <div class="field">
+    <%= form.label :active %>
+    <%= form.check_box :active %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
