--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,6 +91,7 @@ img {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  border-radius: 5px;
 }
 
 /* Style the front side (fallback if image is missing) */
@@ -103,11 +104,12 @@ img {
 .flip-card-back {
   background-color: rgb(53, 98, 143);
   color: rgb(188, 216, 243);
-  width: 160px;
-  height: 238px;
+  width: 156px;
+  height: 234px;
   border: 2px solid;
   border-color: transparent;
   transform: rotateY(180deg);
+  margin-right: 3px;
 } 
 
 .center {
